--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <!--style for footer-->
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
 
     <!-- style for about section -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -803,12 +804,11 @@
                         <img src="img/LittleCake%20Logo.png" alt="SEDS CUSAT Logo">
                     </div>
                     <h2>About Us</h2>
-                    <p>Our goal is a healthy and long life on this beautiful planet in this part of the sweet Universe.
-                    </p>
+                    <p>Our goal is a healthy and long life on this beautiful planet in this part of the sweet Universe.</p>
                     <h3>Contact Us</h3>
                     <p><i class="fas fa-mobile-alt"></i> +381 123 456 7890</p>
-                    <p><i class="fas fa-paper-plane"></i>info@yourdomain.com</p>
-                </div>
+                    <p><i class="fas fa-paper-plane"></i>info@yourdomain.com</p>            
+                </div>        
                 <div class="informations">
                     <h2>Information</h2>
                     <ul>
@@ -818,7 +818,7 @@
                         <li><a href="#">Testimonials</a></li>
                         <li><a href="#">Events</a></li>
                     </ul>
-                </div>
+                </div>        
                 <div class="helpful-links">
                     <h2>Helpful Links</h2>
                     <ul>
@@ -827,42 +827,42 @@
                         <li><a href="#">Terms & Condition</a></li>
                         <li><a href="#">Privacy Policy</a></li>
                     </ul>
-                </div>
+                </div>        
                 <div class="subscribe-form">
                     <h3>Subscribe More Info</h3>
-                    <form>
-                        <div class="input-container">
-                            <i class="fas fa-user"></i>
-                            <input type="text" placeholder="Your Name" name="name">
-                        </div>
-
-                        <div class="input-container">
-                            <i class="fas fa-envelope"></i>
-                            <input type="email" placeholder="Your Email" name="email">
-                        </div>
-                        <button type="submit" class="btn">Subscribe</button>
-                    </form>
-                </div>
-            </footer>
+                     <form> 
+                         <div class="input-container">
+                             <i class="fas fa-user"></i>             
+                             <input type="text" placeholder="Your Name" name="name">
+                         </div>                   
+                          
+                          <div class="input-container">
+                             <i class="fas fa-envelope"></i>            
+                             <input type="email" placeholder="Your Email" name="email">
+                          </div>                   
+                          <button type="submit" class="btn">Subscribe</button>                
+                     </form>             
+                </div>            
+            </footer>    
             <div class="footer-bottom">
                 <div class="social_links">
                     <a href="https://www.instagram.com/developer_sah/">
                         <span class="fa-stack fa-lg ig combo">
                             <i class="fa fa-circle fa-stack-2x circle"></i>
                             <i class="fa fa-instagram fa-stack-1x fa-inverse icon"></i>
-                        </span>
+                          </span>
                     </a>
                     <a href="#">
                         <span class="fa-stack fa-lg fb combo">
                             <i class="fa fa-circle fa-stack-2x circle"></i>
                             <i class="fa fa-facebook fa-stack-1x fa-inverse icon"></i>
-                        </span>
+                          </span>
                     </a>
                     <a href="#">
                         <span class="fa-stack fa-lg yt combo">
                             <i class="fa fa-circle fa-stack-2x circle"></i>
                             <i class="fa fa-youtube-play fa-stack-1x fa-inverse icon"></i>
-                        </span>
+                          </span>
                     </a>
                     <a href="https://twitter.com/developer_sah">
                         <span class="fa-stack fa-lg tw combo">
@@ -882,12 +882,11 @@
                             <i class="fa fa-linkedin fa-stack-1x fa-inverse icon"></i>
                         </span>
                     </a>
-                </div>
-                <div class="copyright">
-                    <p>LittleCake 2020. All Right reserved</p>
-                </div>
-            </div>
-        </div>
+                </div>     
+                 <div class="copyright">
+                     <p>SEDS CUSAT 2021 Ⓒ. All Right reserved</p>
+                 </div>
+           </div>   
         <!--Footer end here-->
         <!-- Sanu -->
 
